[tool.poetry]
name = "doroge-deshevo"
version = "0.1.0"
description = "board of adverticement"
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doroge_deshevo"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
